<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/category_qwerty_keyboard_title">

        <Preference
            android:key="qwerty_button_size_preference"
            android:title="キーのサイズ"
            app:summary="キーのサイズを変更します" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="switch_qwerty_keyboard_password_preference"
            android:summaryOff="@string/switch_qwerty_password_summary_off"
            android:summaryOn="@string/switch_qwerty_password_summary_on"
            android:title="@string/switch_qwerty_preference_title" />





        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="qwerty_romaji_zenkaku_space_preference"
            android:summary="@string/qwerty_romaji_zenkaku_space_preference_summary"
            android:title="@string/qwerty_romaji_zenkaku_space_preference_title" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="qwerty_show_popup_window_preference"
            android:summaryOff="@string/qwerty_show_popup_window_summary_off"
            android:summaryOn="@string/qwerty_show_popup_window_summary_on"
            android:title="@string/qwerty_show_popup_window_title" />



        <SwitchPreferenceCompat
            android:key="qwerty_switch_number_key_without_number_preference"
            android:title="@string/qwerty_switch_number_key_without_number_preference_title"
            app:defaultValue="false"
            app:summary="@string/qwerty_switch_number_key_without_number_preference_sumary" />

    </PreferenceCategory>
</PreferenceScreen>
